objects/EmployeeEntityAssoc__c.object
<CustomObject>
    <description>Many-to-Many relationship between an Entity (Account) and Employee object for Apptus.</description>
    <label>EmployeeEntityAssoc</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>EmployeeEntityAssoc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EmployeeEnttityAssocs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Entity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>PerkinElmer Entities</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PKI Officers</relationshipLabel>
        <relationshipName>EmployeeEnttityAssocs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Non Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>PKI Entities</relationshipLabel>
        <relationshipName>EmployeeEnttityAssocs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee_Signatory__c</fullName>
        <label>Officer Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>